==> aws/amazon-freertos/vendors/st/boards/stm32l475_discovery/ports/common_io/iot_uart.c <==
#include "stm32l4xx_hal.h"
#include "stm32l4xx_hal_uart.h"
#include "stm32l475e_iot01.h"
#include "iot_uart.h"
#include "FreeRTOS.h"
#include "semphr.h"
#define IOT_UART_BLOCKING_TIMEOUT    ( ( uint32_t ) 3000UL )
#define IOT_UART_CLOSED              ( ( uint8_t ) 0 )
#define IOT_UART_OPENED              ( ( uint8_t ) 1 )

IotUARTHandle_t iot_uart_open( int32_t lUartInstance )
{
    IotUARTHandle_t xHandle = NULL;

    if( ( lUartInstance >= 0 ) && ( lUartInstance < sizeof(pxUarts) / sizeof(IotUARTHandle_t) ) )
    {
        xHandle = pxUarts[ lUartInstance ];

        if( xHandle->sOpened == IOT_UART_CLOSED )
        {
            xHandle->xSemphr = xSemaphoreCreateBinaryStatic( &( xHandle->xSemphrBuffer ) );

            /* Special setup routine for USART1 that includes relevant GPIO initialization. */
            if( pxUarts[ lUartInstance ]->pxHuart->Instance == USART1 )
            {
                BSP_COM_Init( COM1, pxUarts[ lUartInstance ]->pxHuart );
                xHandle->sOpened = IOT_UART_OPENED;
            }
            else if( HAL_UART_Init( pxUarts[ lUartInstance ]->pxHuart ) == HAL_OK )
            {
                xHandle->sOpened = IOT_UART_OPENED;
            }
            else
            {
                xHandle = NULL;
            }
        }
        else
        {
            xHandle = NULL;
        }
    }

    return xHandle;
}

void iot_uart_set_callback( IotUARTHandle_t const pxUartPeripheral,
                            IotUARTCallback_t xCallback,
                            void * pvUserCallbackContext )
{
    if( ( pxUartPeripheral != NULL ) )
    {
        pxUartPeripheral->xUartCallback = xCallback;
        pxUartPeripheral->pvUserCallbackContext = pvUserCallbackContext;
    }
}

int32_t iot_uart_read_async( IotUARTHandle_t const pxUartPeripheral,
                             uint8_t * const pvBuffer,
                             size_t xBytes )
{
    int32_t lError = IOT_UART_SUCCESS;

    if( ( pvBuffer == NULL ) || ( xBytes == 0 ) || ( pxUartPeripheral == NULL ) || ( pxUartPeripheral->sOpened == IOT_UART_CLOSED ) )
    {
        lError = IOT_UART_INVALID_VALUE;
    }
    else
    {
        if( HAL_UART_GetState( pxUartPeripheral->pxHuart ) == HAL_UART_STATE_BUSY_RX )
        {
            lError = IOT_UART_BUSY;
        }
        else
        {
            HAL_NVIC_SetPriority( pxUartPeripheral->eIrqNum, 1, 0 );
            HAL_NVIC_EnableIRQ( pxUartPeripheral->eIrqNum );

            if( HAL_UART_Receive_IT( pxUartPeripheral->pxHuart, pvBuffer, ( uint16_t ) xBytes ) != HAL_OK )
            {
                lError = IOT_UART_READ_FAILED;
            }
        }
    }

    return lError;
}

int32_t iot_uart_write_async( IotUARTHandle_t const pxUartPeripheral,
                              uint8_t * const pvBuffer,
                              size_t xBytes )
{
    int32_t lError = IOT_UART_SUCCESS;

    if( ( pvBuffer == NULL ) || ( xBytes == 0 ) || ( pxUartPeripheral == NULL ) || ( pxUartPeripheral->sOpened == IOT_UART_CLOSED ) )
    {
        lError = IOT_UART_INVALID_VALUE;
    }
    else
    {
        if( HAL_UART_GetState( pxUartPeripheral->pxHuart ) == HAL_UART_STATE_BUSY_TX )
        {
            lError = IOT_UART_BUSY;
        }
        else
        {
            HAL_NVIC_SetPriority( pxUartPeripheral->eIrqNum, 1, 0 );
            HAL_NVIC_EnableIRQ( pxUartPeripheral->eIrqNum );

            if( HAL_UART_Transmit_IT( pxUartPeripheral->pxHuart, pvBuffer, ( uint16_t ) xBytes ) != HAL_OK )
            {
                lError = IOT_UART_WRITE_FAILED;
            }
        }
    }

    return lError;
}

int32_t iot_uart_read_sync( IotUARTHandle_t const pxUartPeripheral,
                            uint8_t * const pvBuffer,
                            size_t xBytes )
{
    int32_t lError = IOT_UART_SUCCESS;

    lError = iot_uart_read_async( pxUartPeripheral, pvBuffer, xBytes );

    if( lError == IOT_UART_SUCCESS )
    {
        if( xSemaphoreTake( pxUartPeripheral->xSemphr, pdMS_TO_TICKS( IOT_UART_BLOCKING_TIMEOUT ) ) == pdFALSE )
        {
            HAL_UART_Abort( pxUartPeripheral->pxHuart );
        }
    }

    return lError;
}

int32_t iot_uart_write_sync( IotUARTHandle_t const pxUartPeripheral,
                             uint8_t * const pvBuffer,
                             size_t xBytes )
{
    int32_t lError = IOT_UART_SUCCESS;
    HAL_StatusTypeDef status = HAL_OK;

    if( ( pvBuffer == NULL ) || ( xBytes == 0 ) || ( pxUartPeripheral == NULL ) || ( pxUartPeripheral->sOpened == IOT_UART_CLOSED ) )
    {
        lError = IOT_UART_INVALID_VALUE;
    }
    else
    {
        if( HAL_UART_GetState( pxUartPeripheral->pxHuart ) == HAL_UART_STATE_BUSY_TX )
        {
            lError = IOT_UART_BUSY;
        }
        else
        {
            status = HAL_UART_Transmit( pxUartPeripheral->pxHuart, pvBuffer, ( uint16_t ) xBytes, IOT_UART_BLOCKING_TIMEOUT );

            if( status != HAL_OK )
            {
                lError = IOT_UART_WRITE_FAILED;
            }
        }
    }

    return lError;
}

int32_t iot_uart_close( IotUARTHandle_t const pxUartPeripheral )
{
    int32_t lError = IOT_UART_SUCCESS;

    if( ( pxUartPeripheral == NULL ) || ( pxUartPeripheral->sOpened != IOT_UART_OPENED ) )
    {
        lError = IOT_UART_INVALID_VALUE;
    }
    else
    {
        if( HAL_UART_Abort( pxUartPeripheral->pxHuart ) != HAL_OK )
        {
            lError = IOT_UART_BUSY;
        }
        else if( HAL_UART_DeInit( pxUartPeripheral->pxHuart ) != HAL_OK )
        {
            lError = IOT_UART_BUSY;
        }
        else
        {
            vSemaphoreDelete( pxUartPeripheral->xSemphr );
            lError = IOT_UART_SUCCESS;
            pxUartPeripheral->sOpened = IOT_UART_CLOSED;
        }
    }

    return lError;
}

int32_t iot_uart_ioctl( IotUARTHandle_t const pxUartPeripheral,
                        IotUARTIoctlRequest_t xUartRequest,
                        void * const pvBuffer )
{
    int32_t lError = IOT_UART_INVALID_VALUE;

    if( ( pxUartPeripheral != NULL ) && ( pxUartPeripheral->sOpened == IOT_UART_OPENED ) && ( pvBuffer != NULL ) )
    {
        switch( xUartRequest )
        {
            case eUartSetConfig:

                if( HAL_UART_GetState( pxUartPeripheral->pxHuart ) == HAL_UART_STATE_READY )
                {
                    /* Set the user configurations on STM UART. */
                    pxUartPeripheral->pxHuart->Init.BaudRate = ( ( IotUARTConfig_t * ) pvBuffer )->ulBaudrate;
                    pxUartPeripheral->pxHuart->Init.Parity = ( ( IotUARTConfig_t * ) pvBuffer )->xParity;
                    pxUartPeripheral->pxHuart->Init.WordLength = ( ( IotUARTConfig_t * ) pvBuffer )->ucWordlength;
                    pxUartPeripheral->pxHuart->Init.StopBits = ( ( IotUARTConfig_t * ) pvBuffer )->xStopbits;
                    pxUartPeripheral->pxHuart->Init.HwFlowCtl = ( ( IotUARTConfig_t * ) pvBuffer )->ucFlowControl;

                    if( UART_SetConfig( pxUartPeripheral->pxHuart ) == HAL_OK )
                    {
                        lError = IOT_UART_SUCCESS;
                    }
                }
                else
                {
                    lError = IOT_UART_BUSY;
                }

                break;

            case eUartGetConfig:

                ( ( IotUARTConfig_t * ) pvBuffer )->ulBaudrate = pxUartPeripheral->pxHuart->Init.BaudRate;
                ( ( IotUARTConfig_t * ) pvBuffer )->xParity = pxUartPeripheral->pxHuart->Init.Parity;
                ( ( IotUARTConfig_t * ) pvBuffer )->ucWordlength = pxUartPeripheral->pxHuart->Init.WordLength;
                ( ( IotUARTConfig_t * ) pvBuffer )->xStopbits = pxUartPeripheral->pxHuart->Init.StopBits;
                ( ( IotUARTConfig_t * ) pvBuffer )->ucFlowControl = pxUartPeripheral->pxHuart->Init.HwFlowCtl;

                lError = IOT_UART_SUCCESS;

                break;

            case eGetTxNoOfbytes:

                *( int32_t * ) pvBuffer = ( int32_t ) ( pxUartPeripheral->pxHuart->TxXferSize - pxUartPeripheral->pxHuart->TxXferCount );
                lError = IOT_UART_SUCCESS;

                break;

            case eGetRxNoOfbytes:

                *( int32_t * ) pvBuffer = ( int32_t ) ( pxUartPeripheral->pxHuart->RxXferSize - pxUartPeripheral->pxHuart->RxXferCount );
                lError = IOT_UART_SUCCESS;

                break;

            default:
                break;
        }
    }

    return lError;
}

int32_t iot_uart_cancel( IotUARTHandle_t const pxUartPeripheral )
{
    int32_t lError = IOT_UART_INVALID_VALUE;

    if( ( pxUartPeripheral != NULL ) && ( pxUartPeripheral->sOpened == IOT_UART_OPENED ) )
    {
        if( HAL_UART_GetState( pxUartPeripheral->pxHuart ) == HAL_UART_STATE_READY )
        {
            lError = IOT_UART_NOTHING_TO_CANCEL;
        }
        else if( HAL_UART_Abort( pxUartPeripheral->pxHuart ) == HAL_OK )
        {
            lError = IOT_UART_SUCCESS;
        }
    }

    return lError;
}
